--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
+    "start": "node index.js",
+    "dev": "NODE_ENV=development nodemon index.js"
   },
   "author": "",
   "license": "ISC",
@@ -21,5 +22,8 @@
     "passport-openidconnect": "0.0.2",
     "yaml": "^1.9.2"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "nodemon": "^3.1.4",
+    "passport-mock-strategy": "2.0.0"
+  }
 }
